# Kursach_3_GuryanovA

./: .gitignore  README.md  pyproject.toml
cfg/: settings.py
develop/: account_trans.py  trans_class.py  utils.py
tests/: conftest.py  test_utils.py
